NEXT
[+] Unit tests.
[+] Add method withRemoved() for find removed models

0.1
[+] Initial public release.